src/assets/css/style.css
/* ... */
.subtitle {
  color: rgba(0,0,0,0.5);
}
.date {
  color: rgba(0,0,0,0.4);
}
.sticky {
  position: sticky;
  position: -webkit-sticky;
  top: 120px;
}
header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 10;
  transition: 0.3s transform ease;
  min-height: 80px;
}
header + section:not(#home) {
  padding-top: 80px;
}
header + #post-banner {
  margin-top: 80px;
}
header.header--title + .section-title {
  background: #fafafc;
  margin-bottom: 20px;
  border-bottom: 1px solid rgba(0,0,0,0.05);
}
@media (max-width: 767.98px) {
  header.header--title + .section-title {
    margin-bottom: 40px;
  }
}
header.header--title + .section-title .section-content {
  border-top: 1px solid rgba(0,0,0,0.05);
  padding: 20px;
}
header.header--title + .section-title h1 {
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 2px;
  text-align: center;
}
@media (max-width: 767.98px) {
  header.header--title + .section-title h1 {
    font-size: 34px;
  }
}
@media (min-width: 1200px) {
  header.header--big {
    transform: translateY(30px);
  }
}
header.header--big + section:not(#home) {
  padding-top: 160px;
}
header:before {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: #fff;
  pointer-events: none;
  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.05);
  z-index: -1;
  opacity: 0;
  transition: 0.3s all ease;
}
header .logo {
  color: #162232;
  font-size: 25px;
  font-weight: 700;
  letter-spacing: 0;
}
header.show-bg {
  transform: none;
}
header.show-bg:before {
  opacity: 1;
}
header.show-nav {
  padding: 22px 0;
}
header.show-nav:before {
  opacity: 1;
}
@media (max-width: 575.98px) {
  header.show-nav .header-menu {
    display: block;
  }
  header.show-nav .bar--top {
    transform: translateY(0) translateX(-4px) rotate(-45deg);
  }
  header.show-nav .bar--middle {
    transform: translateX(-10px);
    opacity: 0;
  }
  header.show-nav .bar--bottom {
    transform: translateY(0) translateX(-4px) rotate(45deg);
  }
  header.show-nav .nav {
    display: block;
  }
}
.nav {
  position: relative;
}
@media (min-width: 576px) {
  .nav {
    top: 1px;
    margin-left: auto;
  }
}
@media (max-width: 575.98px) {
  .nav {
    flex-basis: 100%;
    max-width: 100%;
    order: 3;
    flex-direction: column;
    margin-top: 20px;
    padding-top: 20px;
    border-top: 1px solid #eee;
    display: none;
  }
}
@media (min-width: 576px) {
  .nav li:not(:last-child) {
    margin-right: 18px;
  }
}
@media (max-width: 575.98px) {
  .nav li:not(:last-child) {
    margin-bottom: 10px;
  }
}
.nav li a {
  color: #000;
  opacity: 0.5;
  transition: 0.3s opacity ease;
}
.nav li a:hover {
  opacity: 1;
}
.nav li.active a {
  opacity: 1;
  font-weight: 400;
}
.nav .logo-wrapper {
  margin-right: auto !important;
}
.nav .logo-wrapper .logo {
  opacity: 1;
  letter-spacing: 0.5px;
  text-transform: uppercase;
}
@media (max-width: 575.98px) {
  .nav .btn--ghost {
    padding: 0;
  }
}
.burger-menu {
  width: 23px;
  height: 18px;
  cursor: pointer;
  position: relative;
  margin-left: auto;
}
@media (min-width: 576px) {
  .burger-menu {
    display: none;
  }
}
.burger-menu .bar {
  width: 100%;
  height: 2px;
  background: #162232;
  position: absolute;
  transition: 0.3s all ease;
}
.burger-menu .bar--top {
  transform-origin: right top;
  top: 0;
}
.burger-menu .bar--middle {
  top: 50%;
  margin-top: -1px;
}
.burger-menu .bar--bottom {
  transform-origin: right bottom;
  bottom: 0;
}
.burger-menu.is-active .bar--top {
  transform: translateY(0) translateX(-4px) rotate(-45deg);
}
.burger-menu.is-active .bar--middle {
  transform: translateX(-10px);
  opacity: 0;
}
.burger-menu.is-active .bar--bottom {
  transform: translateY(0) translateX(-4px) rotate(45deg);
}
footer {
  font-size: 16px;
  text-align: center;
}
footer .container {
  display: flex;
  height: 80px;
  align-items: center;
  justify-content: center;
}
footer p {
  color: rgba(0,0,0,0.5);
  margin: 0;
  text-align: center;
}
#home {
  min-height: calc(100vh - 80px);
  padding-top: 80px;
  box-sizing: border-box;
}
#home .about {
  margin-bottom: 35px;
}
#home .profile-picture {
  max-width: 140px;
  margin-right: 40px;
  border-radius: 50%;
}
@media (max-width: 767.98px) {
  #home .profile-picture {
    max-width: 100px;
    margin-bottom: 15px;
  }
}
#home .social-links {
  margin-top: 15px;
}
#home .social-links a {
  margin-right: 15px;
  color: #000;
  font-size: 22px;
  display: inline-flex;
  align-items: center;
}
#home .social-links .icon-indiehackers {
  width: 20px;
  position: relative;
  top: -1px;
}
@media (max-width: 767.98px) {
  #home .about-detail {
    width: 100%;
  }
  #home .about-detail .desc {
    font-size: 25px;
  }
}
#home .about-detail .title {
  font-weight: 700;
  margin-bottom: 3px;
}
#home .about-detail .desc {
  color: rgba(0,0,0,0.5);
  font-weight: 400;
}
#post-banner {
  display: block;
  background: #fafafc;
  padding: 15px 0;
  border-top: 1px solid rgba(0,0,0,0.05);
  border-bottom: 1px solid rgba(0,0,0,0.05);
  font-size: 18px;
  color: #777;
}
#post-banner .udemy-logo {
  display: inline-block;
  margin-right: 8px;
  padding-right: 10px;
  margin-bottom: 0;
  border-right: 1px solid #ddd;
}
#post-banner .udemy-logo img {
  width: 100px;
  position: relative;
  top: -3px;
}
.list-wrapper {
  position: relative;
  background: #fff;
  margin: 20px 0 50px;
}
@media (min-width: 768px) {
  .list-wrapper:before,
  .list-wrapper:after {
    content: '';
    position: absolute;
    top: 0;
    bottom: 1px;
    width: 30px;
    background: #fff;
    z-index: 1;
  }
  .list-wrapper:before {
    left: 0;
    transform: translateX(-100%);
  }
  .list-wrapper:after {
    right: 0;
    transform: translateX(100%);
  }
}
.list-wrapper > li:last-child {
  border-bottom: 1px solid #eee;
}
.list-wrapper .list-item {
  padding: 20px 0;
  display: block;
  position: relative;
  border-top: 1px solid #eee;
}
.list-wrapper .list-item p:last-child {
  margin-bottom: 0;
}
/* ... */

